2012-08-12 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/dio/dio.tcl: Database's class fetch method was rewritten on a more simple 
    assumption that methods 'insert' and 'update' know how to actually .... insert and update rows
    * rivet/packages/dio/dio_Sqlite.tcl: The class was found to fail in various circumstances 
    determining the number of rows affected  by a query and determining the set of fields in a 
    table involved by a query. Since a 'select' query is treated in a rather distinctive way 
    from other SQL queries, a new public variable 'select' was added to the properties of the
    class in order to handle consistently the 2 cases within SqliteResult. The number of rows
    affected rows is obtained from the 'changes' subcommand of Sqlite3 connector.
    * rivet/packages/dio_Mysql.tcl: wrong special field handling fixed

2012-08-11 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/session/session-create-sqlite.sql: new file with schema of session package tables
    for Sqlite.

2012-08-07 Massimo Manghi <mxmanghi@apache.org>
    * doc/rivet.css: text in monospace characted made a little smaller
    * rivet/packages/form/form.tcl: Workaround to avoid wrong parsing of form data when parameter
    values have spaces in them
    * src/apache-2/mod_rivet.c: 'server' array uses RIVET_VERSION instead of the lengthy RIVET_PACKAGE_VERSION

2012-07-31 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/dio/dio_Sqlite.tcl: Add search case for package sqlite3. Add method makeDBFieldValue
    to handle time and date special fields support. Add method 'quote' which overrides the same method
    in Database, as correct way to escape quotes (') characters for Sqlite is doubling them ('')

2012-07-04 Massimo Manghi <mxmanghi@apache.org>
    * doc/examples/download.tcl: The example has been having ever since an error in calling 'source' 
    instead of 'parse'. The multitude of the userbase never realized.
