@@ -119,21 +119,30 @@ namespace eval DIO {
 			  	set secs [clock scan $val]
 				set my_val [clock format $secs -format {%Y-%m-%d}]
 				return "DATE_FORMAT('$my_val', '%Y-%m-%d')"
-			  }
+			}
 			DATETIME {
 			  	set secs [clock scan $val]
 				set my_val [clock format $secs -format {%Y-%m-%d %T}]
 				return "DATE_FORMAT('$my_val', '%Y-%m-%d %T')"
-			  }
+			}
 			NOW {
 			    switch $convert_to {
+
+                                # we try to be coherent with the original purpose of this method whose
+                                # goal is to provide to the programmer a uniform way to handle timestamps. 
+                                # E.g.: Package session expects this case to return a timestamp in seconds
+                                # so that differences with timestamps returned by [clock seconds]
+                                # can be done and session expirations are computed consistently.
+                                # (Bug #53703)
+
 				SECS {
 				    if {[::string compare $val "now"] == 0} {
-					set	secs    [clock seconds]
-					set	my_val  [clock format $secs -format {%Y%m%d%H%M%S}]
-					return	$my_val
+#					set	secs    [clock seconds]
+#					set	my_val  [clock format $secs -format {%Y%m%d%H%M%S}]
+#					return	$my_val
+                                        return [clock seconds]
 				    } else {
-					return  "DATE_FORMAT($field_name,'%Y%m%d%H%i%S')"
+					return  "UNIX_TIMESTAMP($field_name)"
 				    }
 				}
 				default {
@@ -142,8 +151,12 @@ namespace eval DIO {
 				    } else {
 					set secs [clock scan $val]
 				    }
-				    set my_val [clock format $secs -format {%Y-%m-%d %T}]
-				    return "DATE_FORMAT('$my_val', '%Y-%m-%d %T')"
+
+                                    # this is kind of going back and forth from the same 
+                                    # format,
+
+				    #set my_val [clock format $secs -format {%Y-%m-%d %T}]
+				    return "FROM_UNIXTIME('$secs')"
 				}
 			    }
 			}
