@@ -123,13 +123,25 @@ namespace eval DIO {
                     }
                     NOW {
                         switch $convert_to {
+
+                            # we try to be coherent with the original purpose of this method whose
+                            # goal is to provide to the programmer a uniform way to handle timestamps. 
+                            # E.g.: Package session expects this case to return a timestamp in seconds
+                            # so that differences with timestamps returned by [clock seconds]
+                            # can be done and session expirations are computed consistently.
+                            # (Bug #53703)
+
                             SECS {
                                 if {[::string compare $val "now"] == 0} {
-                                    set secs    [clock seconds]
-                                    set my_val  [clock format $secs -format {%Y%m%d%H%M%S}]
-                                    return      $my_val
+#                                   set secs    [clock seconds]
+#                                   set my_val  [clock format $secs -format "%Y%m%d%H%M%S"]
+                                    return      [clock seconds]
                                 } else {
-                                    return  "strftime($field_name,'%Y%m%d%H%M%S')"
+
+                                    # the numbers of seconds must be returned as 'utc' to
+                                    # be compared with values returned by [clock seconds]
+
+                                    return  "strftime('%s',$field_name,'utc')"
                                 }
                             }
                             default {
